--- a/package.json
+++ b/package.json
@@ -14,7 +14,16 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "@dfinity/agent": "0.10.1",
+    "@dfinity/candid": "0.10.1",
+    "@dfinity/principal": "0.10.1",
+    "assert": "2.0.0",
+    "buffer": "6.0.3",
+    "events": "3.3.0",
+    "process": "0.11.10",
+    "stream-browserify": "3.0.0",
+    "util": "0.12.4"
   },
   "scripts": {
     "start": "react-scripts start",
