--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "moment": "^2.29.1",
     "process": "0.11.10",
     "react": "^17.0.2",
+    "react-cookies": "^0.1.1",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "stream-browserify": "3.0.0",
